# rust-embed

./: Cargo.toml  README.md  build.rs  test_emb.pb  test_embedding.pb
proto/: embeddings.proto
src/: embedding.rs  lib.rs  main.rs  utils.rs
src/models/: mod.rs
src/models/mini_lm/: mod.rs
src/utils/: libtorch.rs  mod.rs
