[package]
name = "rust_embed"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A pure Rust implementation of embedding algorithms"

[dependencies]
ndarray = "0.15.6"    # For linear algebra and numerical computing
ndarray-rand = "0.14.0"  # For random matrix generation
ndarray-stats = "0.5.1"  # For statistical operations on arrays
rand = "0.8.5"        # For random number generation
tokenizers = "0.13.3" # For tokenizing text
thiserror = "1.0.40"  # For error handling
serde = { version = "1.0.152", features = ["derive"] }  # For serialization
prost = "0.11.8"      # Protocol Buffers implementation for Rust
bytes = "1.4.0"       # For working with byte arrays
anyhow = "1.0.69"     # For error handling
clap = { version = "4.1.8", features = ["derive"] }  # For command-line argument parsing
env_logger = "0.10.0" # For logging
log = "0.4.17"        # For logging
tokio = { version = "1.25.0", features = ["full"] } # For async support
reqwest = { version = "0.11.18", features = ["blocking", "json"] } # For downloading model files
dirs = "5.0.1"        # For finding system directories
tch = { version = "0.13.0", features = ["download-libtorch"] }  # PyTorch bindings for Rust
rust-bert = "0.21.0"  # Rust implementation of transformers models
lazy_static = "1.4.0" # For singleton pattern
memmap2 = "0.7.1"     # For memory-mapped file I/O
zip = "0.6.6"         # For extracting zip archives (libtorch)
parking_lot = "0.12.1" # More efficient Mutex implementation
once_cell = "1.18.0"  # Alternative to lazy_static with better ergonomics
rayon = "1.7.0"       # Parallel iterators
chrono = "0.4.26"     # For datetime handling

[build-dependencies]
prost-build = "0.11.8" # For generating Protobuf code

[features]
default = ["apple-silicon"]
apple-silicon = [] # Enable Apple Silicon optimizations
intel = []         # Enable Intel-specific optimizations
memory-mapped = [] # Use memory-mapped files for faster loading
